# internal/handler/auth.go
@@ -24,10 +24,10 @@ import (
 // @Accept json
 // @Produce json
 // @Param input body entity.User true "user info"
-// @Success 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
+// @Success 200 {object} Response
+// @Failure 400,404,405 {object} Response
+// @Failure 500 {object} Response
+// @Failure default {object} Response
 // @Router /auth/sign-up [post]
 func (h *Handler) SignUp(log *slog.Logger) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
